--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@ title: Your New Jekyll Site
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h2 class="PageTitle u-h4">Hi, I make web things.</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
