added work posts

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@ title: Andrew Laskey
       {% if post.categories contains 'work' %}
       <li>
       	<a class="WorkExcerpt" href="{{ post.url }}">
-          <div class="WorkExcerpt-preview" data-stretch="{{ site.url }}/img/{{ post.image }}"></div>
+          <div class="WorkExcerpt-preview" data-stretch="{{ site.url }}/img/work/{{ post.image }}"></div>
           <div class="WorkExcerpt-mask"></div>
           <h4 class="WorkExcerpt-title">{{ post.title }}</h4>
         </a>
